<resources>
    <string name="app_name">QuumiiBox</string>
    <string name="action_about">About</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="desc_coverpic">CoverPic</string>
    <string name="title_activity_video">Video</string>
    <string name="action_refresh">Refresh</string>
    <string name="desc_avatar">Avatar</string>
    <string name="developer">Developer</string>
    <string name="introduce">Introduce</string>
    <string name="introduce_detail">QuumiiBox is a third-party OpenSource Android client for http://www.huojidao.com . You can find it on github: https://github.com/garywzh/QuumiiBox</string>
    <string name="garywzh_github">GitHub: https://github.com/garywzh</string>
    <string name="garywzh_weibo">Weibo : http://weibo.com/lengyuhanchen</string>
    <string name="thanks">Thanks</string>
    <string name="thanks_detail">Thanks to www.huojidao.com for offering those useful data.</string>
    <string name="no_comments">No comments</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_tag">Tag</string>
    <string name="drawer_feedback">feedback</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="tag">Tag</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_open_drawer">Open navigation drawer</string>
    <string name="desc_close_drawer">Close navigation drawer</string>
    <string name="toast_email_app_not_found">Can\\\'t found email app!</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_comments">Comments</string>
    <string name="title_activity_comments">Comments</string>
    <string name="title_activity_topic">Topic</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="prompt_account">Account</string>
    <string name="desc_Quumii">Quumii</string>
    <string name="toast_login_success">Login Succeed</string>
    <string name="toast_connection_exception">Connect to server failed</string>
    <string name="toast_remote_exception">Server return error, please try later!</string>
    <string name="drawer_image">Image</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_user">User</string>
    <string name="pref_login">Login</string>
    <string name="pref_logout">Logout</string>
    <string name="action_fav">fav</string>
    <string name="drawer_fav">Favorite</string>
    <string name="fav">Favorite</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="sueeccd">Succeed</string>
    <string name="failed">Failed</string>
    <string name="drawer_chat">Topic</string>
    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="toast_login_request">Please login first !</string>
    <string name="already">already</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_reset">Reset</string>
    <string name="action_search">Search</string>
    <string name="reply">Reply</string>

</resources>
