<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/drawer_category"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/drawer_tag" />
    </group>

    <group
        android:menuCategory="secondary"
        android:id="@+id/secondary"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/drawer_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/drawer_feedback" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/drawer_about" />
    </group>
</menu>